# npi_researcher

./: .gitignore  LICENSE  README.md  list_tables.py  pyproject.toml  uw_medical_center_prescribers.html
data_etl/: data_dict_pdf_to_csv.py  exploration_to_duckdb.ipynb  nppes_erd_generator.py
