[project]
name = "npi-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.2",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "mcp-server-duckdb>=1.0.1",
    "pandas>=2.2.3",
    "tabula-py>=2.10.0",
]
